acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/empty_class/_.swift
let kotlin = Kotlin()

exit(0)
